# cmake_and_vscode_template

C_C++_Cmake_Temlate/: CMakeLists.txt
C_C++_Cmake_Temlate/template/include/: test_class.h
C_C++_Cmake_Temlate/template/src/: cmake_install.cmake
cmake_template/: CMakeLists.txt  Makefile
cmake_template/template/src/: Makefile  main.c
vscode_C_and_C++project_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
vscode_C_and_C++project_cmake/debug/: main_D
vscode_C_and_C++project_cmake/template/include/: TestWrapper.h
vscode_C_and_C++project_cmake/template/src/: TestWrapper.c  main  main.c  test_class.cpp
vscode_project_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
vscode_project_cmake/debug/: main_D
vscode_project_cmake/marm_visual_control/launch/: aiarm-controller.launch
vscode_project_cmake/marm_visual_control/script/: arm.py  main.py
vscode_project_cmake/marm_visual_control/src/: Makefile  cmake_install.cmake
vscode_project_cmake/release/: main
vscode_project_make/marm_visual_control/.d/: main.d
vscode_project_make/marm_visual_control/launch/: aiarm-client-controller.launch
vscode_project_make/marm_visual_control/script/: color_detection.py  cvwin.py
vscode_project_make/release/: test
基础例子/vscode_project_cmake/marm_visual_control/include/: helloworld.hpp
基础例子/vscode_project_cmake/marm_visual_control/script/: camera.py
基础例子/vscode_project_cmake/marm_visual_control/src/: Makefile  cmake_install.cmake
基础例子/vscode_project_cmake/release/: main
基础例子/vscode_project_make/: makefile
基础例子/vscode_project_make/debug/: main_D
基础例子/vscode_project_make/marm_visual_control/: makefile
基础例子/vscode_project_make/marm_visual_control/script/: plate_detection.py  test.py
